syntax = "proto3";

package sample.v1;

import "sample/v1/model.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// OpenAPI settings.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  swagger: "2.0";
  schemes: HTTP;
	schemes: HTTPS;
	schemes: WSS;
	consumes: "application/json";
	consumes: "application/protobuf";
	produces: "application/json";
	produces: "application/protobuf";
  info: {
    title: "Echo API";
    version: "0.1.0";
    contact: {
      name: "John Doe";
      email: "john.dow@example.com";
    };
  };
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token provided as: 'Bearer {token}'"
      }
    }
  };
  security: {
    security_requirement: {
      key: "bearer"
    }
  };
};

// Echo service main interface.
service EchoAPI {
  // Reachability test.
  rpc Ping (google.protobuf.Empty) returns (Pong) {
    option (google.api.http) = {
      post: "/echo/ping"
    };
  }
  // Health test.
  rpc Health (google.protobuf.Empty) returns (HealthResponse) {
    option (google.api.http) = {
      post: "/echo/health"
    };
  }
  // Process an incoming echo request.
  rpc Echo (EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/echo/request"
      body: "*"
    };
  }
  // Returns an error roughly about 20% of the time.
  rpc Faulty (google.protobuf.Empty) returns (DummyResponse) {
    option (google.api.http) = {
      post: "/echo/faulty"
    };
  }
  // Exhibit a random latency between 10 and 200ms.
  rpc Slow (google.protobuf.Empty) returns (DummyResponse) {
    option (google.api.http) = {
      post: "/echo/slow"
    };
  }
}

// Sample request for the "echo" service.
message EchoRequest {
  // Payload submitted to the "echo" request.
  string value = 1 [(buf.validate.field).string.min_len = 3];
}

// The response generated by the "echo" server.
message EchoResponse {
  // Result generated by the server.
  string result = 1;
}

// Custom error type returned by the `Faulty` RPC method.
message FaultyError {
  // RPC error code. MUST be a valid code value registered in the
  // google.golang.org/grpc/codes package.
  uint32 code = 1;

  // General description of the error.
  string desc = 2;

  // Custom key/value pairs providing additional details about the error.
  map<string, string> metadata = 3;
}
