syntax = "proto3";

package sample.v1;

import "buf/validate/validate.proto";

// Reachability test response.
message Pong {
  // Whether the service is 'ready-for-use'
  bool ok = 1;
}

// Health test response.
message HealthResponse {
  // Generic availability check, set to 'false' in case of errors.
  bool alive = 1;
}

// Generic request response.
message Response {
  // A key on the entity
  string name = 1 [(buf.validate.field).string = {
    min_len: 2
    max_len: 5
  }];
}

// Sample response structure.
message DummyResponse {
  // Generic status check, set to 'false' in case of errors.
  bool ok = 1;
}
